--- a/modulo-0/style.css
+++ b/modulo-0/style.css
@@ -3,6 +3,14 @@
   margin: 0;
   box-sizing: border-box;
 }
+html {
+  font-size: 90%;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+h1 {
+  color: rgb(185, 144, 67);
+  margin-top: 10px; margin-left: 5px;
+}
 .main-nav {
     margin-top: 30px;
     list-style: none;
@@ -19,6 +27,9 @@
     text-decoration: none;
     color: darkolivegreen;
     }
+#botonformulario a {
+      color: rgb(189, 115, 19);
+     }
 .main-nav__item a:hover {
   color:rgb(121, 97, 52)
 }
@@ -28,11 +39,13 @@
 .main-nav__item a::after {
     content: " | ";
  }
+
 main {
   width: 100%;
   height: 600px;
   border: 5px solid rgb(224, 220, 172);
   padding: 15px 40px;
+  background-color: rgb(252, 242, 223);
 }
 h2 {
     font-size:larger;
@@ -40,17 +53,25 @@ h2 {
  }
 
 .lista {
+    margin-top: 5px;
     font-style: oblique; list-style: none;
+    font-weight: bold;
+    color: rgb(185, 144, 67) ;
   }
-.sublista {
-    color:salmon;
-  }
-.sublista a:hover {
+ol > li {
+    list-style: none;
+}
+ol > li a {
+  color: darkolivegreen; text-decoration: none;
+}
+
+ol > li a:hover {
     color:goldenrod;
   }
-#link {
-    color: salmon;
-  }
+
 span {
     color: rgb(164, 64, 221);
   }
+figcaption {
+  color: darkolivegreen;
+}
