--- a/modulo-0/style.css
+++ b/modulo-0/style.css
@@ -12,66 +12,67 @@ h1 {
   margin-top: 10px; margin-left: 5px;
 }
 .main-nav {
-    margin-top: 30px;
-    list-style: none;
-    padding-left: 10px ;
-    background-color: rgb(224, 220, 172);
+  margin-top: 30px;
+  list-style: none;
+  padding-left: 10px ;
+  background-color: rgb(224, 220, 172);
 }
-.main-nav__item {
-    display: inline-block;
-    margin-right: 40px;
-    font-size: large;
-    font-weight: bold;
+.main-nav-item {
+  display: inline-block;
+  margin-right: 40px;
+  font-size: large;
+  font-weight: bold;
 }
-.main-nav__item a {
-    text-decoration: none;
-    color: darkolivegreen;
-    }
-#botonformulario a {
-      color: rgb(189, 115, 19);
-     }
-.main-nav__item a:hover {
+.main-nav-item a {
+  text-decoration: none;
+  color: darkolivegreen;
+}
+.alt-main-nav-item a {
+  color: rgb(189, 115, 19);
+}
+.main-nav-item a:hover {
   color:rgb(121, 97, 52)
 }
-.main-nav__item a::before {
+.main-nav-item a::before {
   content: " | ";
 }
-.main-nav__item a::after {
-    content: " | ";
+.main-nav-item a::after {
+  content: " | ";
  }
 
 main {
   width: 100%;
-  height: 600px;
+  height: 650px;
   border: 5px solid rgb(224, 220, 172);
-  padding: 15px 40px;
+  padding: 5px 40px;
   background-color: rgb(252, 242, 223);
 }
 h2 {
-    font-size:larger;
-    color: darkolivegreen;
- }
+  font-size:larger;
+  color: darkolivegreen;
+  margin-top: 10px;
+}
 
 .lista {
-    margin-top: 5px;
-    font-style: oblique; list-style: none;
-    font-weight: bold;
-    color: rgb(185, 144, 67) ;
-  }
+  margin-top: 5px;
+  font-style: oblique; list-style: none;
+  font-weight: bold;
+  color: rgb(185, 144, 67) ;
+}
 ol > li {
-    list-style: none;
+  list-style: none;
 }
 ol > li a {
   color: darkolivegreen; text-decoration: none;
 }
 
 ol > li a:hover {
-    color:goldenrod;
-  }
+  color:goldenrod;
+}
 
 span {
-    color: rgb(164, 64, 221);
-  }
+  color: rgb(164, 64, 221);
+}
 figcaption {
-  color: darkolivegreen;
+  color: rgb(77, 97, 46);
 }
