--- a/modulo-0/style.css
+++ b/modulo-0/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 html {
-  font-size: 90%;
+  font-size: 62.5%;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 h1 {
@@ -19,7 +19,7 @@ h1 {
 }
 .main-nav-item {
   display: inline-block;
-  margin-right: 40px;
+  margin-right: 3rem;
   font-size: large;
   font-weight: bold;
 }
@@ -38,29 +38,30 @@ h1 {
 }
 .main-nav-item a::after {
   content: " | ";
- }
+}
 
 main {
   width: 100%;
-  height: 650px;
+  height: 100%;
   border: 5px solid rgb(224, 220, 172);
   padding: 5px 40px;
   background-color: rgb(252, 242, 223);
 }
 h2 {
-  font-size:larger;
+  font-size: 2rem;
   color: darkolivegreen;
   margin-top: 10px;
 }
 
 .lista {
+  font-size: 1.6rem;
   margin-top: 5px;
   font-style: oblique; list-style: none;
   font-weight: bold;
   color: rgb(185, 144, 67) ;
 }
 ol > li {
-  list-style: none;
+  list-style: none; font-size: 1.4rem;
 }
 ol > li a {
   color: darkolivegreen; text-decoration: none;
