--- a/modulo-0/style.css
+++ b/modulo-0/style.css
@@ -39,7 +39,6 @@ h1 {
 .main-nav-item a::after {
   content: " | ";
 }
-
 main {
   width: 100%;
   height: 100%;
@@ -50,7 +49,8 @@ main {
 h2 {
   font-size: 2rem;
   color: darkolivegreen;
-  margin-top: 10px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .lista {
@@ -66,14 +66,19 @@ ol > li {
 ol > li a {
   color: darkolivegreen; text-decoration: none;
 }
-
 ol > li a:hover {
   color:goldenrod;
 }
-
-span {
-  color: rgb(164, 64, 221);
+.foto-verduras {
+  margin-top: 2rem;
 }
 figcaption {
   color: rgb(77, 97, 46);
+  font-size: 1.4rem;
+  margin-bottom: 2rem;
+}
+
+span {
+  color: rgb(196, 102, 15);
+  font-size: 1.4rem;  
 }
