--- a/modulo-1/modulo-1-leccion-3-flexbox-orden/main.css
+++ b/modulo-1/modulo-1-leccion-3-flexbox-orden/main.css
@@ -6,17 +6,17 @@
     max-width: 70vw;       
 }
 .noticia {    
-    width: 48%;
+    width: 48%; /*esto es para que se hagan las dos columnas, lo importante es el wrap*/
     margin: 5px;
     
 }
 .noticia-principal {
     order: -1;
-    width: 100%;
+    width: 100%; /*esto para que la noticia principal ocupe todo el ancho*/
     margin: auto;
 }
 .noticia img {
-    display: block;
+    display: block; /*esto es para que la imagen ocupe todo su espacio horizontal*/
     width: 100%;
     height: 150px;
     object-fit: cover; /* esto es para que la imagen se adapte a la forma del contenedor*/
