--- a/modulo-1/modulo-1-leccion-4-ejercicio6-articulo/main.css
+++ b/modulo-1/modulo-1-leccion-4-ejercicio6-articulo/main.css
@@ -12,13 +12,12 @@
     display: flex;
     flex-direction: column; 
     height: 100vh;
-    
-    
-
 }
 .autor {
     font-size: 18px;
     margin-bottom: 40px;
+    position: relative;
+    left: 20px;
 }
 h1 {
     font-size: 32px;
