--- a/modulo-1/modulo-1-leccion-4-ejercicio4-aire/main.css
+++ b/modulo-1/modulo-1-leccion-4-ejercicio4-aire/main.css
@@ -3,10 +3,14 @@
     margin: 0;
     box-sizing: border-box;
 }
+main {
+    position: relative;
+}
 .principal {
-    position: absolute;
+    position: relative;
     max-width: 600px;
     width: 86%;
+    margin: auto;
 }
 p {
     text-align: center;
